tests/compile-fail/throw.stderr
error: this should fail to compile
 --> tests/compile-fail/throw.rs:2:39
  |
2 |       let _: proc_macro2::TokenStream = zyn::zyn!(
  |  _______________________________________^
3 | |         @throw("this should fail to compile")
4 | |     );
  | |_____^
  |
  = note: this error originates in the macro `zyn::zyn` (in Nightly builds, run with -Z macro-backtrace for more info)
